[project]
name = "ai-assistant"
version = "0.1.0"
description = "A documentation chatbot for Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "htbuilder>=0.9.0",
    "streamlit>=1.49.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
]
